# scrape-google-scholar-py

./: .gitignore  .gitpod.yaml  LICENSE  MANIFEST.in  README.md  example_usage.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: octo-reminder.yml
bs4_results/: bs4_author_articles_results.py  bs4_author_citedby_results.py  bs4_author_co_authors_results.py  bs4_author_results.py  bs4_organic_results.py  bs4_profile_results.py  google-scholar-scrape-publications-from-certain-website.py  scholar_scrape_profiles_based_on_univ_name.py  scrape_all_google_scholar_profile_author_results_to_csv.py  scrape_google_scholar_all_author_articles_to_csv.py  selenium_cite_results.py
custom_backend/: google_scholar_author_info_all_articles.py  google_scholar_cite_results.py  google_scholar_cited_by_public_access_author.py  google_scholar_organic_search.py  google_scholar_profiles_results.py  google_scholar_scrape_publications_from_particular_conference.py  google_scholar_top_mandates_metrics.py  google_scholar_top_publications_metrics.py  scholar_scrape_profiles_based_on_univ_name.py
custom_solution/: bs4_author_citedby_results.py  bs4_organic_results.py  bs4_profile_results.py  google-scholar-author-all-articles.py.py  google-scholar-author-co-authors.py  google-scholar-cite-results.py  google-scholar-cited-by-public-access-author.py  google-scholar-organic-search.py  google-scholar-profiles-results.py  google-scholar-scrape-publications-from-certain-website.py  google-scholar-scrape-publications-from-particular-conference.py  google_scholar_author_info_all_articles.py  google_scholar_cite_results.py  (+9 more)
(+48 files in other folders)
