[tool.ruff]
line-length = 120

[tool.poetry]
name = "scrape-google-scholar-py"
version = "0.2.0"
homepage = "https://github.com/dimitryzub/scrape-google-scholar"
description = "Extract data from all Google Scholar pages in Python. Sponsored by SerpApi."
authors = ["Dmitiry Zub <dimitryzub@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "scrape_google_scholar"}]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = "^3.8"
selectolax = "^0.3.12"
requests = "^2.28.2"
pandas = "^1.5.3"
google-search-results = "^2.4.1"
selenium-stealth = "^1.0.6"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.243"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
